[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-voice"
version = "0.1.0"
description = "TTS with karaoke-style word highlighting for Claude Code. Fully local, zero API keys, one file."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Null-Phnix"}]
keywords = ["claude", "tts", "voice", "kokoro", "terminal", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro>=0.7",
    "sounddevice>=0.4",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/Null-Phnix/claude-voice"
Repository = "https://github.com/Null-Phnix/claude-voice"

[project.scripts]
claude-voice = "claude_voice:main"

[tool.setuptools]
py-modules = ["claude_voice"]
